@@ -34,7 +34,7 @@ interface offering the full flexibility and power of the Python language.""",
       package_dir={"autokey": "src/lib"},
       packages=["autokey", "autokey.gtkui"],
       package_data={"autokey.gtkui" : ["data/*"]},
-      data_files=[("/usr/share/pixmaps", ["config/autokey.svg", "config/autokey-status.svg", "config/autokey-status-dark.svg"]),
+      data_files=[("/usr/share/pixmaps", ["config/autokey.svg", "config/autokey-status.svg", "config/autokey-status-dark.svg", "config/autokey-status-error.svg"]),
                   ("/usr/share/applications", ["config/autokey-gtk.desktop"]),
                   ('share/man/man1/', ['doc/man/autokey-gtk.1', 'doc/man/autokey-run.1'])],
       scripts=['autokey-gtk', 'autokey-run']
